# naive_paxos

./: .gitignore  CMakeLists.txt  README.txt  client_main.cpp  config.json  local_config.json  main.cpp  paxos.cpp  paxos.h  server_main.cpp  test.command
.github/workflows/: cmake.yml
proto/: paxos.proto
role/: Instance.cpp  Instance.h  acceptor.cpp  acceptor.h  acceptor.hpp  client.cpp  client.h  client.hpp  config.cpp  config.h  config.hpp  instance.cpp  instance.h  learner.cpp  learner.h  learner.hpp  logger.cpp  logger.h  logger.hpp  message.h  message.hpp  paxos.cpp  paxos.h  proposer.cpp  proposer.h  proposer.hpp  server.cpp  server.h  server.hpp
src/: acceptor.cpp  acceptor.hpp  client.cpp  client.hpp  config.cpp  config.hpp  instance.cpp  instance.hpp  learner.cpp  learner.hpp  logger.cpp  logger.hpp  message.hpp  proposer.cpp  proposer.hpp  server.cpp  server.hpp
util/: network.cpp  network.h  network.hpp  sync.h  sync.hpp
